Version 0.4.30
--------------
+ New MemoryUtils.h functions for SSE2 memcpy
+ Removed Win9X support
x int128: was not compiling on Cygwin

Version 0.4.29, 2013-05-13
--------------
+ Ztring: Adding some Date_From_Seconds_* methods
x Ztring: Ztring_NoZero option was not correctly implemented
x File: Write only is not possible with ios_base::out (file is truncated) on Linux
x Dir: Include_Dirs only was not working
x File: accepts Windows "\\?\" magic value
x Thread: Is* methods were not handling all cases

Version 0.4.28, 2012-08-06
--------------
+ Removing _T() in order to be compatible with LLVM compiler
x Ztring: UTF-16 conversion routines crash if the provided string size is odd.
x GNU: forcing stdc++ at link

Version 0.4.27, 2012-05-22
--------------
+ Better support of machines lacking of std::basic_stream
x License text corrections

Version 0.4.26, 2012-04-09
--------------
+ Better support of machines lacking of std::stringstream
+ Better support of machines requesting explicit stdc++ library link option (e.g. some ARM embedded devices)

Version 0.4.25, 2012-03-13
--------------
+ Fast bitstream parser
+ Removing Win9X detection on 64-bit CPU
+ Ztring: integer to text conversion with radix=2
+ Updated Linux compilation scripts

Version 0.4.24, 2012-01-24
--------------
+ Conversion from ctime style date to ISO date
+ GNU: more generic test of size_t as a long (e.g. for s390)
x Read of text arrays of data was not well done if separator is bigger than 1 character
x UTF-8 to UCS4 conversion was buggy with 4-byte characters
x LittleEndian2float80() was buggy
x Removing TinyXml and Base64 from the package

Version 0.4.23, 2011-11-10
--------------
+ Loading of CSV or any 2-dimensional array is carriage return mode insensitive
+ Ztring: ISO_8859_2 support
+ File: Truncate method
x Ztring: UTF-8 load/save using generic code instead of Windows functions (they don't work for all Unicode codes)
x File: Crash with some unordered API calls